<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ShowRoute!</string>
    <string name="urlString">"http://10.0.2.2:3000/routes/search"</string>
    <string name="app_name">Wadeeny</string>
    <string name="searchView_source_editText">Source District</string>
    <string name="searchView_destination_editText">Destination District</string>
    <string name="searchView_sourceLocated_checkBox">Use Current Location as Source</string>
    <string name="searchView_destinationLocated_checkBox">Use Current Location as Distination</string>
    <string name="searchView_search_button">Search</string>
    <string name="confirm_button_show_route">Confirm</string>
    <string name="alertDialogHeadingUnableToConnect">"Unable To Connect"</string>
    <string name="alertDialogHeadingError">"Error"</string>
	<string name="toastMessageResponseHandlerIStreamIsNull">"Response from server is null "</string>
	<string name="alertDialogMessageUnableToConnect">"Could not Connect to Server "</string>
	<string name="progressDialogMessageSplashScreenRetrievingUserListing">"Retrieving Route &#8230; "</string>
	<string name="noItemExpandableList">"No Item"</string>
		
	<drawable name="white">#FFFFFF</drawable>
    <drawable name="blue">#2554C7</drawable>
    <drawable name="green">#347C2C</drawable>
    <drawable name="orange">#ff9900</drawable>
    <drawable name="pink">#FF00FF</drawable>
    <drawable name="violet">#A020F0</drawable>
    <drawable name="gray">#778899</drawable>
    <drawable name="red">#C11B17</drawable>
    <drawable name="black">#000000</drawable>
	
	
</resources>