<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    android:orientation = "vertical"
    android:layout_width = "fill_parent"
    android:layout_height = "fill_parent" >
    
    <EditText
        android:id = "@+id/searchView_source_editText"
        android:inputType = "textAutoComplete"
        android:hint = "@string/searchView_source_editText"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content" >
        
    </EditText>
	
	<CheckBox
        android:id = "@+id/searchView_sourceLocated_checkBox"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/searchView_sourceLocated_checkBox"
        android:checked = "false" >
	    
	</CheckBox>
	
	<EditText
	    android:id = "@+id/searchView_destination_editText"
	    android:inputType = "textAutoComplete"
		android:hint = "@string/searchView_destination_editText"
		android:layout_width = "fill_parent"
		android:layout_height = "wrap_content" >
	    
	</EditText>
	
	<CheckBox
        android:id = "@+id/searchView_destinationLocated_checkBox"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/searchView_destinationLocated_checkBox"
        android:checked = "false" >
	    
	</CheckBox>
	
	<Button
	    android:id = "@+id/searchView_search_button"
	    android:text = "@string/searchView_search_button"
		android:layout_gravity="right"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
	    
	</Button>
	
</LinearLayout>
